docs change and settings

--- a/node/readme
+++ b/node/readme
@@ -11,6 +11,8 @@ and add
 
 joel ALL = NOPASSWD: /home/joel/projects/jarvis/node/scripts/restart_daemon.sh
 
+
+apt-get install libssl-dev
 ## Python installation ## (grab 3.3.x)
 cd ~
 wget http://www.python.org/ftp/python/3.3.2/Python-3.3.2.tar.bz2
@@ -18,6 +20,10 @@ tar jxf ./Python-3.3.2.tar.bz2
 cd ./Python-3.3.2
 ./configure --prefix=/opt/python3.3.2
 make && sudo make install
+
+# Install easy_install.
+wget https://bootstrap.pypa.io/ez_setup.py
+sudo /opt/python3.3.2/bin/python3.3 ez_setup.py
 
 
 ## Tellcore Installation ##
